// =====================
// PRODUCTS
// =====================

Table products {
  id varchar [primary key]
  photos_count integer [not null]
  weight_grams integer [not null]
  width_cm decimal(8,2) [not null]
  height_cm decimal(8,2) [not null]
  length_cm decimal(8,2) [not null]
  category_name varchar [not null]
}

Ref: products.category_name > categories.name

Table categories {
  name varchar [primary key]
  name_english varchar [not null, unique]
}


// =====================
// ORDERS
// =====================

Enum order_status {
  delivered,
  approved,
  canceled,
  created,
  invoiced,
  processing,
  shipped,
  unavailable
}

Table orders {
  id varchar [primary key]
  status order_status [not null]
  purchase_timestamp datetime [not null]
  approved_at datetime [not null]
  shipped_at datetime [not null]
  delivered_at datetime [not null]
  estimated_delivery_date date [not null]
  customer_id varchar [not null]
}

Ref: orders.customer_id > customers.id

Table order_items {
  id varchar [primary key]
  product_id varchar [not null]
  order_id varchar [not null]

  shipment_limit_at datetime [not null]
  price decimal(10,2) [not null]
  freight_value decimal(10,2) [not null]
  seller_id varchar [not null]
}

Ref: order_items.order_id > orders.id
Ref: order_items.product_id > products.id
Ref: order_items.seller_id > sellers.id


// =====================
// PAYMENTS
// =====================

Enum payment_type {
  credit_card
  debit_card,
  boleto,
  not_defined,
  voucher
}

Table payments {
  id varchar [primary key]

  order_id varchar [not null]
  sequential integer [not null]
  type payment_type [not null]
  installments integer [not null]
  value number [not null]
}

Ref: payments.order_id > orders.id

// =====================
// REVIEWS
// =====================

Table reviews {
  id varchar [primary key]
  order_id varchar [not null]

  score tinyint [not null, note: '1-5']
  title varchar
  comment varchar
  created_at datetime [not null]
  answered_at datetime 
}

Ref: reviews.order_id > orders.id


// =====================
// PEOPLE
// =====================

Table customers {
  id varchar [primary key]
  unique_id varchar [not null, unique]
  zip_code_id varchar [not null]
}

Ref: customers.zip_code_id > locations.id

Table sellers {
  id varchar [primary key]
  zip_code_id varchar [not null]
}

Ref: sellers.zip_code_id > locations.id


// =====================
// LOCATION
// =====================

Table locations {
  id varchar [primary key]
  postal_code_prefix varchar [not null]
  latitude decimal(10,8) [not null]
  longitude decimal(11,8) [not null]
  city_id varchar [not null]
}

Ref: locations.city_id > cities.id


Table cities {
  id varchar [primary key]
  name varchar [not null]
  state_id varchar [not null]

  indexes {
    (name, state_id) [unique]
  }
}

Ref: cities.state_id > states.id


Table states {
  id varchar [primary key]
  name varchar [not null, unique]
  uf varchar [not null, unique]
}